# Catherine

./: .gitignore  CMakeLists.txt  README.md
Client/res/material/: bamboo_wood.mtl  bloom.mtl  default.mtl  exposure.mtl  geometry.mtl  gold.mtl  nanosuit_arm.mtl  nanosuit_body.mtl  nanosuit_glass.mtl  nanosuit_hand.mtl  nanosuit_helmet.mtl  nanosuit_leg.mtl  rust_iron.mtl  skybox.mtl  streaked_metal.mtl
Client/res/model/Cerberus_by_Andrew_Maximov/Materials/: Cerberus.mtl
Client/res/model/buildin/: PreviewMesh.fbx  cube.fbx  plane.fbx  sphere.fbx
Client/res/model/nanosuit/material/: nanosuit_arm.mtl  nanosuit_body.mtl  nanosuit_glass.mtl  nanosuit_hand.mtl  nanosuit_helmet.mtl  nanosuit_leg.mtl  nanosuit_mouse.mtl
Client/res/shader/: TBDRLight.cs  bloom.fs  bloom.vs  default.fs  default_deferred.fs  default_deferred.vs  exposure.fs  geometry.fs  geometry.vs  simple.fs  simple.vs  simple_deferred.fs  skybox.fs  skybox.vs  standard.fs  standard_deferred.fs
Project/: DreamEngine.sln
Project/DreamEngine/: DreamEngine.vcxproj  DreamEngine.vcxproj.filters
Src/: AttributeLayout.h  Bloom.cpp  Bloom.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CameraContext.cpp  CameraContext.h  CameraController.cpp  CameraController.h  CameraManager.cpp  CameraManager.h  Client.cpp  Client.h  ComponentCommon.h  DeferredPipeline.cpp  DeferredPipeline.h  DemoMesh.cpp  DemoMesh.h  DemoRenderer.cpp  DemoRenderer.h  DeviceCommon.h  DeviceConst.cpp  DeviceConst.h  DeviceFactory.cpp  DeviceFactory.h  Exposure.cpp  Exposure.h  FileUtility.cpp  FileUtility.h  ForwardPipeline.cpp  ForwardPipeline.h  ForwardPlusPipeline.cpp  ForwardPlusPipeline.h  GameWorld.cpp  GameWorld.h  ICamera.h  ICameraContext.h  IComponent.h  (+122 more)
Src/glad/include/glad/: glad.h
Src/glad/src/: glad.c
toolchain/ShaderConductor-win-vc142-x64-Release/: GIT-COMMIT.txt
toolchain/ShaderConductor-win-vc142-x64-Release/Lib/: ShaderConductor.lib
toolchain/ShaderConductor-win-x64-Release/: GIT-COMMIT.txt
